--- a/css/style.css
+++ b/css/style.css
@@ -128,4 +128,9 @@ strong {
   width: 450px;
 }
 
+.codExamples {
+  background-color: black;
+  color: white;
+}
+
 /*# sourceMappingURL=style.css.map */
